2012-05-30  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14117]
	* sysdeps/i386/bits/byteswap.h: Removed.
	* sysdeps/i386/bits/byteswap-16.h: Likewise.
	* sysdeps/x86_64/bits/byteswap.h: Renamed to ...
	* sysdeps/x86/bits/byteswap.h: This.
	* sysdeps/x86_64/bits/byteswap-16.h: Renamed to ...
	* sysdeps/x86/bits/byteswap-16.h: This.
	* sysdeps/i386/Implies: Add x86.
	* sysdeps/x86_64/Implies: Likewise.

2012-05-30  David S. Miller  <davem@davemloft.net>

	* soft-fp/soft-fp.h (FP_CUR_EXCEPTIONS): Define.
	(FP_TRAPPING_EXCEPTIONS): Provide default implementation.
	* sysdeps/sparc/sparc32/soft-fp/sfp-machine.h
	(FP_TRAPPING_EXCEPTIONS): Define.
	* sysdeps/sparc/sparc64/soft-fp/sfp-machine.h
	(FP_TRAPPING_EXCEPTIONS): Define.
	* soft-fp/op-common.h (_FP_PACK_SEMIRAW): Signal underflow for
	subnormals only when inexact has been signalled or underflow
	exceptions are enabled.
	(_FP_PACK_CANONICAL): Likewise.

2012-05-30  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14183]
	* sysdeps/unix/sysv/linux/x86_64/bits/typesizes.h (__NLINK_T_TYPE):
	Defined with __UWORD_TYPE if __x86_64__ isn't defined.

2012-05-30  Richard Henderson  <rth@twiddle.net>

	* sysdeps/unix/make-syscalls.sh: Protect symbol_version output
	with #ifndef NOT_IN_libc.

	* scripts/abilist.awk: Accept 8 fields.  Handle Alpha functions
	marked to avoid plt entry.

2012-05-30  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14112]
	* Makeconfig (default-abi): New macro.
	(abi-includes): Likewise.
	($(common-objpfx)soversions.mk): Remove WORDSIZE check.  Use
	$(abi-$(default-abi)-lib-soname) for soname if defined.
	($(common-objpfx)gnu/lib-names.stmp): Generate from
	abi-variants.
	* Makefile (installed-stubs): Likewise.
	* include/stubs-biarch.h: Removed.
	* scripts/lib-names.awk: Only handle one library at a time.
	* scripts/soversions.awk: Remove WORDSIZE support.
	* shlib-versions: Remove WORDSIZE and i.86/s390x/powerpc64 ld
	entries.
	* sysdeps/unix/sysv/linux/Makefile (syscall-list-variants):
	Removed.