@@ -1,4 +1,4 @@
-/* x86_64 is little-endian.  */
+/* i386/x86_64 are little-endian.  */
 
 #ifndef _ENDIAN_H
 # error "Never use <bits/endian.h> directly; include <endian.h> instead."
